+ added cors + added samples + fix projects list return + a lot of package are passe from dev to prod ? I don't know why
